[gd_scene load_steps=3 format=3 uid="uid://dethyjfdbf8sp"]

[ext_resource type="Script" path="res://gameplay/ground/GroundControl.gd" id="1_cvfc2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_31rcb"]
radius = 5.0

[node name="GroundControl" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_cvfc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_31rcb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
